# jpeg-encoder

./: .cursorignore  .gitignore  .gitmodules  Cargo.toml  cms.md  dct.sh  extract_dqt.py  lcms.md  porting.md  relevant_cpp.txt
.cursor/rules/: auto-vectorization-examples.mdc  lcms2.mdc  porting-to-rust.mdc
reference_dct/: dct.sh  extract_dqt.py  generate_dct_references.py  generate_test_data.py
reference_dct/src/: cms.rs
reference_dct/src/tests/: mod.rs
reference_dct/src1/tests/: reference_data.rs
src/: adaptive_quantization.rs  avx2.rs  cms.rs  color_transform.rs  encoder.rs  encoder2.txt.rs  error.rs  fdct.rs  image_buffer.rs  lib.rs  quantization.rs  tf.rs  writer.rs  xyb.rs
src/jpegli/: adaptive_quantization.rs  cjpegli.md  cms.rs  color_transform.rs  fdct_jpegli.rs  inventory.md  jpegli-detail1.md  jpegli_encoder.rs  mod.rs  porting.md  quant.rs  quant_constants.rs  reference_test_data.rs  reference_tests copy.rs  reference_tests.rs  tf.rs  xyb.rs
src/jpegli/tests/: adaptive_quantization_test.rs  mod.rs  structs.rs  test_utils.rs  testdata.md  testdata.rs
src/jpegli/tests/json/: ComputeAdaptiveQuantFieldTest.json  ComputePreErosionTest.json  FuzzyErosionTest.json  InitQuantizerTest.json  PerBlockModulationsTest.json  SetQuantMatricesTest.json
src/tests/: general.rs  mod.rs  reference_tests.rs
