[package]
name = "jpeg-encoder"
version = "0.6.1"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "(MIT OR Apache-2.0) AND IJG"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"
rust-version = "1.61"

[features]
default = ["std", "cms"]
simd = ["std"]
std = []
cms = ["lcms2"]

# DO NOT USE THIS IN PRODUCTION. Expose several internal functions for benchmark purposes.
benchmark = []

[dependencies]
rgb = "0.8.25"
byteorder = "1.3.2"
lcms2 = { version = "6.1", optional = true }
chrono = "0.4"
crc32fast = "1.2"
log = "0.4"
arrayref = "0.3"

[dev-dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
approx = "0.5"

[profile.dev]
opt-level = 1
