[package]
name = "jpeg-encoder"
version = "0.6.1"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "(MIT OR Apache-2.0) AND IJG"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"
rust-version = "1.61"

[features]
default = ["std", "simd", "jpegli", "lcms", "moxcms"]
simd = ["std"]
std = []
lcms = ["dep:lcms2"]
moxcms = ["dep:moxcms"]
jpegli = ["std", "simd", "lcms", "moxcms", "dep:multiversion"]

# DO NOT USE THIS IN PRODUCTION. Expose several internal functions for benchmark purposes.
benchmark = []

[dependencies]
rgb = "0.8.25" #nostd safe
lcms2 = { version = "6.1", optional = true }
moxcms = { version = "0.6.0", optional = true }
arrayref = "0.3" #nostd safe
multiversion = { version = "0.8", optional = true }
[dev-dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
approx = "0.5"
png = "0.17"

[profile.dev]
opt-level = 1
