[package]
name = "jpeg-encoder"
version = "0.6.1"
authors = ["Volker Ströbel <volkerstroebel@mysurdity.de>"]
edition = "2021"
license = "(MIT OR Apache-2.0) AND IJG"
description = "JPEG encoder"
categories = ["multimedia::images"]
keywords = ["jpg", "jpeg", "encoder", "image"]
readme = "README.md"
repository = "https://github.com/vstroebel/jpeg-encoder"
rust-version = "1.61"

[features]
default = ["std", "simd", "jpegli", "lcms", "moxcms"]
simd = []
jpegli = []
lcms = []
moxcms = []
std = []    

# DO NOT USE THIS IN PRODUCTION. Expose several internal functions for benchmark purposes.
benchmark = []

[dependencies]
rgb = "0.8.25" #nostd safe
lcms2 = { version = "6.1", optional = false }
moxcms = { version = "0.6.0", optional = false }
arrayref = "0.3" #nostd safe
multiversion = { version = "0.8", optional = false }
lazy_static = "1.4.0"
serde_repr = "0.1.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
jpeg-decoder = { version = "0.3", default-features = false }
approx = "0.5"
png = "0.17"
serde_json = "1.0"

once_cell = { version = "1.17" }


[profile.dev]
opt-level = 1
